# CSRTResearch

./: .gitignore  BUILD_OPENCV_CUDA_GUIDE.md  BUILD_WITH_VCPKG.md  CMakeLists.txt  CMakeLists_check.txt  CMakePresets.json  CSRTUpdate.drawio  CUDA_COMPATIBILITY.md  INSTALL_OPENCV_CUDA.md  OTB_EVALUATION_GUIDE.md  README.md  SETUP_CUDA_COMPLETE.md  auc_compare.csv  build_opencv_cuda.ps1  build_opencv_now.ps1  build_project.ps1  check_cuda.cpp  compare_results.py  download_opencv.ps1  export_models_to_onnx.py  install_cuda.ps1  quick_build.ps1  setup_vcpkg.ps1  simple_build.ps1  train_update_csrt.py  vcpkg.json  verify_cuda.ps1
pcsrt/: README.md  dataset.py  loss.py  test.py  tracker.py  train.py
pure_csrt/: auc_pure.csv  auc_pure_full.csv  main_pcsrt.cpp
pure_csrt_detail/: CMakeLists.txt  auc_compare.csv
pure_csrt_detail/inc/: csrt_segmentation.hpp  csrt_tracker.hpp
pure_csrt_detail/src/: csrt_color_names.cpp  csrt_scale.cpp  main.cpp  otb_compare.cpp  test_basketball.cpp
src/: main_csrt_only.cpp
update_csrt/: BASKETBALL_RESULTS.md  CMakeLists.txt  __init__.py  auc_compare.csv  auc_compare_kf1.csv  auc_compare_kf2.csv  auc_compare_kf3.csv  auc_kf1_lr0.csv  auc_kf1_lr1.csv  auc_kf1_lr1_psr025.csv  auc_kf1_lr1_psr05.csv  auc_kf1_lr1_qfast.csv  auc_kf1_lr1_r10.csv  auc_kf1_lr1_smax105.csv  auc_kf1_lr1_smax13.csv  auc_kf1_lr2.csv  auc_kf1_lr2_psr05.csv  auc_kf1_prior1_lr0.csv  auc_kf1_prior1_lr1.csv  auc_kf1_prior1_lr2.csv  auc_kf2_lr2.csv  auc_kf3_lr2.csv  auc_update.csv  basketball_result.txt  check_ckpt.py  config.py  corr_project.py  dataset.py  dcf_solver.py  debug_BlurCar1.csv  debug_Car4.csv  debug_Deer.csv  debug_Football1.csv  debug_basketball.py  dual_refined.txt  dual_simplified.txt  eval_otb.py  export_onnx.py  feature_extractor.py  pure_baseline.csv  (+8 more)
update_csrt/inc/: AdaptiveGating.hpp  ChannelReliability.hpp  Config.hpp  CorrProjection.hpp  DCFSolver.hpp  DeepFeatureExtractor.hpp  HOGExtractor.hpp  MaskGenerator.hpp  OpenCVCSRTWrapper.hpp  RescueStrategy.hpp  SpatialReliability.hpp  UpdatedCSRTTracker.hpp  csrt_color_names.hpp  csrt_scale.hpp  csrt_tracker.hpp  csrt_utils.hpp
update_csrt/inc/csrt_opencv/: TrackerCSRTMod.hpp
update_csrt/models/: adaptive_gating.onnx  corr_project.onnx
update_csrt/runs/: events.out.tfevents.1765471491.梁玉辉.18732.0  events.out.tfevents.1765471618.梁玉辉.5360.0  events.out.tfevents.1765472543.梁玉辉.16432.0
update_csrt/src/: AdaptiveGating.cpp  ChannelReliability.cpp  CorrProjection.cpp  DCFSolver.cpp  DeepFeatureExtractor.cpp  HOGExtractor.cpp  MaskGenerator.cpp  RescueStrategy.cpp  SpatialReliability.cpp  UpdatedCSRTTracker.cpp  csrt_segmentation.cpp  csrt_tracker.cpp  csrt_utils.cpp  main.cpp  otb_compare.cpp  otb_eval.cpp  otb_eval_simple.cpp  simple_dual_tracker.cpp  test_basketball.cpp
update_csrt/src/csrt_opencv/: TrackerCSRTMod.cpp  csrt_wrapper.hpp  trackerCSRT.cpp
